// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiComment is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiComment testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="someuser"
          class="euiAvatar euiAvatar--m euiAvatar--user"
          role="img"
          style="background-color:#c47c6c;color:#000000"
          title="someuser"
        >
          <span
            aria-hidden="true"
          >
            s
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props event is rendered 1`] = `
<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="someuser"
          class="euiAvatar euiAvatar--m euiAvatar--user"
          role="img"
          style="background-color:#c47c6c;color:#000000"
          title="someuser"
        >
          <span
            aria-hidden="true"
          >
            s
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        >
          commented
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props timelineIcon is rendered 1`] = `
<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="Mario"
          class="euiAvatar euiAvatar--l euiAvatar--user"
          role="img"
          style="background-color:#f1d86f;color:#000000"
          title="Mario"
        >
          <span
            aria-hidden="true"
          >
            M
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props timestamp is rendered 1`] = `
<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="someuser"
          class="euiAvatar euiAvatar--m euiAvatar--user"
          role="img"
          style="background-color:#c47c6c;color:#000000"
          title="someuser"
        >
          <span
            aria-hidden="true"
          >
            s
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
        <div
          class="euiCommentEvent__headerTimestamp"
        >
          <time>
            21 days ago
          </time>
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props type custom is rendered 1`] = `
<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="someuser"
          class="euiAvatar euiAvatar--m euiAvatar--user"
          role="img"
          style="background-color:#c47c6c;color:#000000"
          title="someuser"
        >
          <span
            aria-hidden="true"
          >
            s
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiCommentEvent euiCommentEvent--custom"
  />
</div>
`;

exports[`EuiComment props type regular is rendered 1`] = `
<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="someuser"
          class="euiAvatar euiAvatar--m euiAvatar--user"
          role="img"
          style="background-color:#c47c6c;color:#000000"
          title="someuser"
        >
          <span
            aria-hidden="true"
          >
            s
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props type update is rendered 1`] = `
<div
  class="euiComment euiComment--update"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="someuser"
          class="euiAvatar euiAvatar--m euiAvatar--user"
          role="img"
          style="background-color:#c47c6c;color:#000000"
          title="someuser"
        >
          <span
            aria-hidden="true"
          >
            s
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiCommentEvent euiCommentEvent--update"
  >
    <div
      class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow"
    >
      <div
        class="euiCommentEvent__header"
      >
        <div
          class="euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiComment renders a body 1`] = `
<div
  class="euiComment euiComment--hasBody"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class=""
      >
        <div
          aria-label="someuser"
          class="euiAvatar euiAvatar--m euiAvatar--user"
          role="img"
          style="background-color:#c47c6c;color:#000000"
          title="someuser"
        >
          <span
            aria-hidden="true"
          >
            s
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
    <div
      class="euiCommentEvent__body"
    >
      <p>
        This is the body.
      </p>
    </div>
  </figure>
</div>
`;
